--- a/.github/workflows/deploy_aws_preview.yml
+++ b/.github/workflows/deploy_aws_preview.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - preview
+    paths:
+      - "backend/**"
 
 env:
   AWS_REGION: eu-north-1                   # set this to your preferred AWS region, e.g. us-west-1
