--- a/.github/workflows/deploy_aws_preview.yml
+++ b/.github/workflows/deploy_aws_preview.yml
@@ -17,7 +17,7 @@ jobs:
   build_and_push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    environment: production
+    environment: preview
 
     steps:
       - name: Checkout
@@ -73,7 +73,7 @@ jobs:
   deploy:
     needs: build_and_push
     runs-on: ubuntu-latest
-    environment: production
+    environment: preview
     strategy:
       fail-fast: false
       matrix:
