--- a/.github/workflows/deploy_aws_preview.yml
+++ b/.github/workflows/deploy_aws_preview.yml
@@ -101,3 +101,11 @@ jobs:
           task-definition: ${{ matrix.task_definition }}
           container-name: ${{ matrix.container }}
           image: ${{env.ECR_REGISTRY}}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+          
+      - name: Deploy Amazon ECS task definition for ${{ matrix.name }}
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ matrix.service }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
