--- a/.github/workflows/aws-avidly-preview.yml
+++ b/.github/workflows/aws-avidly-preview.yml
@@ -7,24 +7,23 @@ on:
       - "backend/**"
 
 env:
-  AWS_REGION: eu-north-1
+  AWS_REGION: eu-north-1 
   ECR_REPOSITORY: quivr-preview
-  ECR_REGISTRY: 716319591694.dkr.ecr.eu-north-1.amazonaws.com/
+  ECR_REGISTRY: 716319591694.dkr.ecr.eu-north-1.amazonaws.com
   ECS_CLUSTER: quivr-backend
-  IMAGE_TAG: latest
 
 jobs:
   build_and_push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    environment: production
+    environment: preview
 
     steps:
       - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@5fd3084fc36e372ff1fff382a39b10d03659f355 # v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -32,23 +31,23 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@2fc7aceee09e9e4a7105c0d060c656fad0b4f63d # v1
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc # v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to Docker Hub
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - uses: docker/setup-qemu-action@68827325e0b33c7199eb31dd4e31fbe9023e06e3 # v3
+      - uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3
+        uses: docker/setup-buildx-action@v3
 
       - name: Create Docker Cacha Storage Backend
         run: |
@@ -58,7 +57,7 @@ jobs:
           ls -la
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
-        uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5
+        uses: docker/build-push-action@v5
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
@@ -66,29 +65,29 @@ jobs:
           context: ./backend/
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}, ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest, ghcr.io/quivrhq/quivr:latest, stangirard/quivr-backend-prebuilt:latest, stangirard/quivr-backend-prebuilt:${{ env.IMAGE_TAG }}
+          tags: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}, ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest, ghcr.io/jonazk/quivr:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   deploy:
     needs: build_and_push
     runs-on: ubuntu-latest
-    environment: production
+    environment: preview
     strategy:
       fail-fast: false
       matrix:
         include:
-          - name: "quivr"
-            service: "quivr-preview"
+          - name: "quivr-backend"
+            service: "quivr-run-preview"
             task_definition: ".aws/task_definition_quivr_preview.json"
-            container: "quivr"
+            container: "quivr-preview"
 
     steps:
       - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@5fd3084fc36e372ff1fff382a39b10d03659f355 # v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -96,14 +95,14 @@ jobs:
 
       - name: Fill in the new image ID in the Amazon ECS task definition for ${{ matrix.name }}
         id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@4225e0b507142a2e432b018bc3ccb728559b437a # v1
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ${{ matrix.task_definition }}
           container-name: ${{ matrix.container }}
           image: ${{env.ECR_REGISTRY}}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-
+          
       - name: Deploy Amazon ECS task definition for ${{ matrix.name }}
-        uses: aws-actions/amazon-ecs-deploy-task-definition@df9643053eda01f169e64a0e60233aacca83799a # v1
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: ${{ matrix.service }}
